[MOSIP-17024] paginate dropdown button to avoid truncation

--- a/admin-ui/src/app/shared/toolbar/toolbar.component.scss
+++ b/admin-ui/src/app/shared/toolbar/toolbar.component.scss
@@ -53,6 +53,9 @@
   width: 50px !important;
   padding: 10px;
 }
+:host::ng-deep .mat-form-field{
+  text-align: left !important;
+}
 ::ng-deep .mat-select-arrow {
   height: 3px !important;
   width: 3px !important;
